app will go from landing page to login page

--- a/app/pages/landing/landing.html
+++ b/app/pages/landing/landing.html
@@ -2,5 +2,5 @@
     <Label text="Are you a"></Label>
     <Button text="Teacher"></Button>
     <Button text="School"></Button>
-    <Button text="Log In"></Button>
+    <Button text="Log In" (tap)="goToLogin()"></Button>
 </StackLayout>
