--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -1,5 +1,5 @@
 <StackLayout #container>
     <TextField #email hint="Email Address" keyboardType="email" autocorrect="false" autocapitalizationType="none"></TextField>
-    <TextField #password hint="Password" secure="true"</TextField>
-    <Button text="Log In" class="submit-button"></Button>
+    <TextField #password hint="Password" secure="true"></TextField>
+        <Button text="Log In" class="submit-button"></Button>
 </StackLayout>
