--- a/app/pages/landing/landing.html
+++ b/app/pages/landing/landing.html
@@ -1,6 +1,6 @@
 <StackLayout #container>
     <Label text="Are you a"></Label>
-    <Button text="Teacher"></Button>
+    <Button text="Teacher" (tap)="getCredentials()"></Button>
     <Button text="School" (tap)="goToSchoolInfo()"></Button>
     <Button text="Log In" (tap)="goToLogin()"></Button>
 </StackLayout>
