added User class and started SignUpOne

--- a/app/pages/signUp/schoolInfo/schoolInfo.html
+++ b/app/pages/signUp/schoolInfo/schoolInfo.html
@@ -1,4 +1,4 @@
 <StackLayout #container>
     <Label text="Schools use MontessoriMatch to find high quality teachers who are good cultural fits."></Label>
-    <Button text="Next"></Button>
+    <Button text="Sign Me Up!" (tap)="goToSignUpOne()"></Button>
 </StackLayout>
