--- a/app/pages/matchingProfile/matchProfOne/matchProfOne.html
+++ b/app/pages/matchingProfile/matchProfOne/matchProfOne.html
@@ -1,4 +1,4 @@
 <StackLayout #container>
     <Label text="Type of School"></Label>
-    <ListPicker #orgTypesPicker class="picker" [items]="orgTypesItems" [orgTypesSelectedIndex]="orgTypesSelectedIndex" verticalAlignment="center" horizontalAlignment="center" (orgTypesSelectedIndexChange)="orgTypesSelectedIndexChanged(orgTypesPicker)"></ListPicker>
+    <ListPicker #orgTypesPicker class="picker" [items]="orgTypesItems" verticalAlignment="center" horizontalAlignment="center" (selectedIndexChange)="orgTypesSelectedIndexChanged(orgTypesPicker)"></ListPicker>
 </StackLayout>
