a bunch of pages up

--- a/app/pages/matchingProfile/matchProfFour/matchProfFour.html
+++ b/app/pages/matchingProfile/matchProfFour/matchProfFour.html
@@ -3,5 +3,5 @@
     <ListPicker #sizesPicker class="picker" [items]="sizesItems" (selectedIndexChange)="sizesSelectedIndexChanged(sizesPicker)"></ListPicker>
     <Label text="Importance"></Label>
     <ListPicker #sizesWgtPicker class="picker" [items]="importanceItems" (selectedIndexChange)="sizesSelectedIndexChanged(sizesWgtPicker)"></ListPicker>
-    <Button text="Next" (tap)="goToMatchProfFour()"></Button>
+    <Button text="Next" (tap)="goToMatchProfFive()"></Button>
 </StackLayout>
