--- a/app/pages/matchingProfile/matchProfInfo/matchProfInfo.html
+++ b/app/pages/matchingProfile/matchProfInfo/matchProfInfo.html
@@ -1,4 +1,4 @@
 <StackLayout #container>
-    <Label text="In the next few pages, we'll ask you to answer seven questions about your school, and how important it is that teachers match you in those areas."></Label>
+    <HtmlView html="<h2>In the next few pages, we'll ask you to answer seven questions about your school, and how important it is that teachers match you in those areas.</h2>"></HtmlView>
     <Button text="Go!" (tap)="goToMatchProfOne()"></Button>
 </StackLayout>
