--- a/app/pages/suggestedMatches/suggestedMatches.html
+++ b/app/pages/suggestedMatches/suggestedMatches.html
@@ -1,10 +1,12 @@
-<StackLayout>
-    <Label text="Get Matches"></Label>
-    <ScrollView #container>
-    <ListView items="{{ _userService.user.suggestedMatches }}" (tap)="hello()">
-        <ListView.itemTemplate>
-            <Label text="lol wut?"></Label>
-        </ListView.itemTemplate>
+<StackLayout #container>
+    <Label text="Suggested Teacher Matches:"></Label>
+    <ListView [items]="suggestedMatches">
+        <template let-item="item">
+            <GridLayout rows="75" columns="auto, *, auto" (tap)="viewSingleProfile(item.email)">
+                <Image src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=500&h=500"></Image>
+                <Label row="0" col="1" textWrap="true" [text]="item.displayName"></Label>
+                <Label row="0" col="2" [text]="item.perc | percent"></Label>
+            </GridLayout>
+        </template>
     </ListView>
-    </ScrollView>
 </StackLayout>
