--- a/app/pages/viewProfile/viewProfile.html
+++ b/app/pages/viewProfile/viewProfile.html
@@ -3,34 +3,28 @@
     <ScrollView>
         <StackLayout>
             <Image src="{{theirProfile.image || 'https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=500&h=500'}}"></Image>
-            <Label textWrap="true" text="{{theirProfile.description}}"></Label>
-            <Label text="State {{theirProfile.state}}"></Label>
-            <Label text="{{theirProfile.matchPercent * 100}}%"></Label>
-            <Label text="Based on the following"></Label>
+            <Label textWrap="true" class="description" [text]="theirProfile.description"></Label>
+            <Label class="emphasis full left" [text]="'State: ' + theirProfile.state"></Label>
+            <Label class="matchPercent full center" [text]="'Match Percent: ' + theirProfile.matchPercent * 100 + '%'"></Label>
+            <Label class="emphasis full center" text="Based on the following"></Label>
             <StackLayout>
-                <GridLayout columns="120, *, auto" rows="auto" class="header">
-                    <Label col="0" text="Trait"></Label>
-                    <Label col="1" text="Yours"></Label>
-                    <Label col="2" text="Theirs"></Label>
+                <GridLayout class="headerGrid" columns="120, *, *" rows="auto" class="header">
+                    <Label class="headerText center" col="0" text="Trait"></Label>
+                    <Label class="headerText center" col="1" text="Yours"></Label>
+                    <Label class="headerText center" col="2" text="Theirs"></Label>
                 </GridLayout>
-                <GridLayout *ngFor="#key of paramMapKeys" columns="120, *, *" rows="auto" class="block">
-                    <Label col="0" [text]="key"></Label>
-                    <StackLayout col="1">
-                        <Label *ngFor="#param of paramMap[key].mine" [text]="param.name" [ngClass]="param.match"></Label>
+                <GridLayout *ngFor="let key of paramMapKeys" columns="120, *, *" rows="auto" class="block">
+                    <StackLayout class="full" [class.rowMatch]="paramMap[key].rowMatch" [class.noRowMatch]="!paramMap[key].rowMatch">
+                        <Label class="emphasis full center " col="0" [text]="key"></Label>
+                        <Label class="emphasis full center emphasis" [text]="paramMap[key].percent + '%'"></Label>
                     </StackLayout>
-                    <StackLayout col="2">
-                        <Label *ngFor="#param of paramMap[key].theirs" [text]="param.name" [ngClass]="param.match"></Label>
+                    <StackLayout col="1" class="paramValue">
+                        <Label class="param full center" *ngFor="let param of paramMap[key].mine" [text]="param.name" [ngClass]="param.match"></Label>
+                    </StackLayout>
+                    <StackLayout col="2" class="paramValue">
+                        <Label class="param full center" *ngFor="let param of paramMap[key].theirs" [text]="param.name" [ngClass]="param.match"></Label>
                     </StackLayout>
                 </GridLayout>
-                <!--<GridLayout columns="120, *, *" rows="auto" class="block">
-                    <Label col="0" text="Location"></Label>
-                    <StackLayout col="1">
-                        <Label *ngFor="#param of paramMap.Location.mine" [text]="param.name" [ngClass]="param.match"></Label>
-                    </StackLayout>
-                    <StackLayout col="2">
-                        <Label *ngFor="#param of paramMap.Location.theirs" [text]="param.name" [ngClass]="param.match"></Label>
-                    </StackLayout>
-                </GridLayout>-->
             </StackLayout>
         </StackLayout>
     </ScrollView>
