--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -1,6 +1,7 @@
 <StackLayout #container>
     <Label text="MontessoriMatch" class="logo"></Label>
-    <TextField #email [(ngModel)]="loginEmail" hint="Email Address" keyboardType="email" autocorrect="false" autocapitalizationType="none" id="first"></TextField>
+    <TextField #email [(ngModel)]="loginEmail" hint="Email Address" keyboardType="email" autocorrect="false" autocapitalizationType="none"></TextField>
     <TextField #password [(ngModel)]="loginPass" hint="Password" secure="true"></TextField>
-    <Button text="Log In" class="submit-button"></Button>
+    <Button text="Log In" class="submit-button" (tap)="login()"></Button>
+    <Label textWrap="true" text="{{ errorMessage }}" id="first"></Label>
 </StackLayout>
