--- a/app/pages/viewProfile/viewProfile.html
+++ b/app/pages/viewProfile/viewProfile.html
@@ -1,10 +1,17 @@
 <StackLayout #container>
-    <Label text="View Profile"></Label>
+    <Label visibility="{{theirProfile.displayName ? 'collapsed' : 'visible'}} text="View Profile"></Label>
+    <Label visibility="{{theirProfile.displayName ? 'visible' : 'collapsed'}} text="View {{theirprofile.displayName}'s profile'"></Label>
     <ScrollView>
-        <StackLayout>
+        <StackLayout class="bigStack">
             <Image src="{{theirProfile.image || 'https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=500&h=500'}}"></Image>
             <Label textWrap="true" class="description" [text]="theirProfile.description"></Label>
             <Label class="emphasis full left" visibility="{{theirProfile.state ? 'visible' : 'collapsed'}}" [text]="'State: ' + theirProfile.state"></Label>
+            <Label class="emphasis full left" visibility="{{theirProfile.email ? 'visible' : 'collapsed'}}" [text]="'Email: ' + theirProfile.email"></Label>
+            <Label class="emphasis full left" text="Interested: {{theirProfile.interest ? 'Yes' : 'No'}}"></Label>
+            <Label class="emphasis full left" text="Match: {{theirProfile.match ? 'Yes' : 'Not yet'}}"></Label>
+            <Button text="show interest" visibility="{{theirProfile.interest ? 'collapsed' : 'visible'}}" (tap)="showInterest()"></Button>
+            <Button text="remove interest" visibility="{{theirProfile.interest ? 'visible' : 'collapsed'}}" (tap)="removeInterest()"></Button>
+            <Label textWrap="true" class="message" [text]="message" visibility="{{messageVisible ? 'visible' : 'collapsed'}}"></Label>
             <Label class="matchPercent full center" [text]="'Match Percent: ' + theirProfile.matchPercent * 100 + '%'"></Label>
             <Label class="emphasis full center" text="Based on the following"></Label>
             <StackLayout>
@@ -15,7 +22,7 @@
                 </GridLayout>
                 <StackLayout colSpan="3" row="1" class="hr">
                 </StackLayout>
-                <GridLayout *ngFor="let key of paramMapKeys" columns="120, *, *" rows="auto, auto">
+                <GridLayout class="traits" *ngFor="let key of paramMapKeys" columns="120, *, *" rows="auto, auto">
                     <StackLayout class="full" [class.rowMatch]="paramMap[key].rowMatch" [class.noRowMatch]="!paramMap[key].rowMatch">
                         <Label class="emphasis full center " col="0" [text]="key"></Label>
                         <Label class="emphasis full center emphasis" [text]="paramMap[key].percent + '%'"></Label>
