--- a/app/pages/suggestedMatches/suggestedMatches.html
+++ b/app/pages/suggestedMatches/suggestedMatches.html
@@ -4,7 +4,7 @@
         <ListView row="0" [items]="suggestedMatches" [class.visible]="listLoaded">
             <template let-item="item">
                 <GridLayout rows="75" columns="auto, *, auto" (tap)="viewSingleProfile(item.email)">
-                    <Image src="https://placeholdit.imgix.net/~text?txtsize=33&txt=350%C3%97150&w=500&h=500"></Image>
+                    <Image [src]="item.avatarUrl"></Image>
                     <Label row="0" col="1" textWrap="true" [text]="item.displayName"></Label>
                     <Label row="0" col="2" [text]="item.perc | percent"></Label>
                 </GridLayout>
